UserDaoImpl.java: refactor method getAllUsers() with Stream.toList()